chore: round data a bit

--- a/notebooks/bribes_bvecvx.ipynb
+++ b/notebooks/bribes_bvecvx.ipynb
@@ -25,17 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "╒════════════════════╤═══════════════════════╤═════════════════════╤════════════════════════╤═════════════════╤════════════════════════════════╕\n",
-      "│   Total amnt CVX $ │   Total amnt BADGER $ │   Amount CVX bought │   Amount BADGER bought │   $/vlCVX total │   $/vlCVX w/o badgerwbtc votes │\n",
-      "╞════════════════════╪═══════════════════════╪═════════════════════╪════════════════════════╪═════════════════╪════════════════════════════════╡\n",
-      "│             106428 │               40662.3 │             16893.4 │                  10453 │       0.0597272 │                      0.0660481 │\n",
-      "╘════════════════════╧═══════════════════════╧═════════════════════╧════════════════════════╧═════════════════╧════════════════════════════════╛\n"
+      "|   Total amnt CVX $ |   Total amnt BADGER $ |   Amount CVX bought |   Amount BADGER bought |   $/vlCVX total |   $/vlCVX w/o badgerwbtc votes |\n",
+      "|--------------------|-----------------------|---------------------|------------------------|-----------------|--------------------------------|\n",
+      "|             106428 |               40662.3 |             16893.4 |                  10453 |            0.06 |                          0.066 |\n"
      ]
     }
    ],
@@ -43,19 +41,19 @@
     "from decimal import Decimal\n",
     "from tabulate import tabulate\n",
     "\n",
-    "voting_data = {'total_cvx_sold_in_$': Decimal('106428.4201143926446203450000'),\n",
-    "               'total_badger_sold_in_$': Decimal('40662.30486016452944687396000'),\n",
-    "               'amount_cvx': Decimal('16893.40001815756263815'),\n",
-    "               'amount_badger': Decimal('10453.034668422758212564'),\n",
-    "               'badger_price_at_the_moment_of_sale_in_$': Decimal('3.89000000'),\n",
-    "               'cvx_price_at_the_moment_of_sale_in_$': Decimal('6.30000000'),\n",
-    "               '$/vlCVX for total votes': Decimal('0.05972715684832703152999461992'),\n",
-    "               '$/vlCVX without badgerwbtc': Decimal('0.06604811007672992155992001420')}\n",
+    "voting_data = {'total_cvx_sold_in_$': Decimal('106428.420'),\n",
+    "               'total_badger_sold_in_$': Decimal('40662.305'),\n",
+    "               'amount_cvx': Decimal('16893.400'),\n",
+    "               'amount_badger': Decimal('10453.035'),\n",
+    "               'badger_price_at_the_moment_of_sale_in_$': Decimal('3.890'),\n",
+    "               'cvx_price_at_the_moment_of_sale_in_$': Decimal('6.300'),\n",
+    "               '$/vlCVX for total votes': Decimal('0.060'),\n",
+    "               '$/vlCVX without badgerwbtc': Decimal('0.066')}\n",
     "table_rows = [[\n",
     "    voting_data['total_cvx_sold_in_$'], voting_data['total_badger_sold_in_$'], voting_data['amount_cvx'],\n",
     "     voting_data['amount_badger'], voting_data['$/vlCVX for total votes'], voting_data['$/vlCVX without badgerwbtc'],]\n",
     "]\n",
-    "table = tabulate(table_rows, tablefmt=\"fancy_grid\", headers=[\"Total amnt CVX $\", \"Total amnt BADGER $\", \"Amount CVX bought\", \"Amount BADGER bought\",\"$/vlCVX total\", \"$/vlCVX w/o badgerwbtc votes\"])\n",
+    "table = tabulate(table_rows, tablefmt=\"github\", headers=[\"Total amnt CVX $\", \"Total amnt BADGER $\", \"Amount CVX bought\", \"Amount BADGER bought\",\"$/vlCVX total\", \"$/vlCVX w/o badgerwbtc votes\"])\n",
     "print(table)"
    ],
    "metadata": {
@@ -67,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "outputs": [
     {
      "data": {
