chore: remove some text for table to fit

--- a/notebooks/bribes_bvecvx.ipynb
+++ b/notebooks/bribes_bvecvx.ipynb
@@ -25,15 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|   Total amnt CVX $ |   Total amnt BADGER $ |   Amount CVX bought |   Amount BADGER bought |   $/vlCVX total |   $/vlCVX w/o badgerwbtc votes |\n",
-      "|--------------------|-----------------------|---------------------|------------------------|-----------------|--------------------------------|\n",
-      "|             106428 |               40662.3 |             16893.4 |                  10453 |            0.06 |                          0.066 |\n"
+      "|   Total CVX $ |   Total BADGER $ |   Amount CVX bought |   Amount Badger bought |   $/vlCVX total |   $/vlCVX pure bribes |\n",
+      "|---------------|------------------|---------------------|------------------------|-----------------|-----------------------|\n",
+      "|        106428 |          40662.3 |             16893.4 |                  10453 |            0.06 |                 0.066 |\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
     "    voting_data['total_cvx_sold_in_$'], voting_data['total_badger_sold_in_$'], voting_data['amount_cvx'],\n",
     "     voting_data['amount_badger'], voting_data['$/vlCVX for total votes'], voting_data['$/vlCVX without badgerwbtc'],]\n",
     "]\n",
-    "table = tabulate(table_rows, tablefmt=\"github\", headers=[\"Total amnt CVX $\", \"Total amnt BADGER $\", \"Amount CVX bought\", \"Amount BADGER bought\",\"$/vlCVX total\", \"$/vlCVX w/o badgerwbtc votes\"])\n",
+    "table = tabulate(table_rows, tablefmt=\"github\", headers=[\"Total CVX $\", \"Total BADGER $\", \"Amount CVX bought\", \"Amount Badger bought\",\"$/vlCVX total\", \"$/vlCVX pure bribes\"])\n",
     "print(table)"
    ],
    "metadata": {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "outputs": [
     {
      "data": {
