chore: add diff calculation in % between vlcvx values

--- a/notebooks/bribes_bvecvx.ipynb
+++ b/notebooks/bribes_bvecvx.ipynb
@@ -24,8 +24,20 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Voting Results"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "outputs": [
     {
      "name": "stdout",
@@ -33,7 +45,10 @@
      "text": [
       "|   Total CVX $ |   Total BADGER $ |   Amount CVX bought |   Amount Badger bought |   $/vlCVX total |   $/vlCVX pure bribes |\n",
       "|---------------|------------------|---------------------|------------------------|-----------------|-----------------------|\n",
-      "|        106428 |          40662.3 |             16893.4 |                  10453 |            0.06 |                 0.066 |\n"
+      "|        106428 |          40662.3 |             16893.4 |                  10453 |            0.06 |                 0.066 |\n",
+      ">>> Llama.Airforce $/vlCVX : 0.06832\n",
+      ">>> Badger $/vlCVX : 0.066\n",
+      ">>> Difference is 3.454%\n"
      ]
     }
    ],
@@ -54,7 +69,14 @@
     "     voting_data['amount_badger'], voting_data['$/vlCVX for total votes'], voting_data['$/vlCVX without badgerwbtc'],]\n",
     "]\n",
     "table = tabulate(table_rows, tablefmt=\"github\", headers=[\"Total CVX $\", \"Total BADGER $\", \"Amount CVX bought\", \"Amount Badger bought\",\"$/vlCVX total\", \"$/vlCVX pure bribes\"])\n",
-    "print(table)"
+    "print(table)\n",
+    "\n",
+    "llama_vlCVX = 0.06832\n",
+    "badger_vlCVX = 0.066\n",
+    "\n",
+    "print(f\">>> Llama.Airforce $/vlCVX : {llama_vlCVX}\")\n",
+    "print(f\">>> Badger $/vlCVX : {badger_vlCVX}\")\n",
+    "print(f\">>> Difference is {round(abs(llama_vlCVX - badger_vlCVX) / ((llama_vlCVX + badger_vlCVX) / 2) * 100, 3)}%\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -64,8 +86,30 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Bribes harvesting info"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "outputs": [
     {
      "data": {
