chore: improve output layout

--- a/notebooks/bribes_bvecvx.ipynb
+++ b/notebooks/bribes_bvecvx.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 82,
    "outputs": [
     {
      "name": "stdout",
@@ -46,6 +46,8 @@
       "|   Total CVX $ |   Total BADGER $ |   Amount CVX bought |   Amount Badger bought |   $/vlCVX total |   $/vlCVX pure bribes |\n",
       "|---------------|------------------|---------------------|------------------------|-----------------|-----------------------|\n",
       "|        106428 |          40662.3 |             16893.4 |                  10453 |            0.06 |                 0.066 |\n",
+      "\n",
+      "\n",
       ">>> Llama.Airforce $/vlCVX : 0.06832\n",
       ">>> Badger $/vlCVX : 0.066\n",
       ">>> Difference is 3.454%\n"
@@ -74,6 +76,7 @@
     "llama_vlCVX = 0.06832\n",
     "badger_vlCVX = 0.066\n",
     "\n",
+    "print(f\"\\n\")\n",
     "print(f\">>> Llama.Airforce $/vlCVX : {llama_vlCVX}\")\n",
     "print(f\">>> Badger $/vlCVX : {badger_vlCVX}\")\n",
     "print(f\">>> Difference is {round(abs(llama_vlCVX - badger_vlCVX) / ((llama_vlCVX + badger_vlCVX) / 2) * 100, 3)}%\")"
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 83,
    "outputs": [
     {
      "data": {
