--- a/notebooks/bribes_bvecvx.ipynb
+++ b/notebooks/bribes_bvecvx.ipynb
@@ -37,15 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 38,
    "outputs": [
+    {
+     "data": {
+      "text/plain": "  Total CVX $ Total BADGER $ Amount CVX bought Amount Badger bought  \\\n0  106428.420      40662.305         16893.400            10453.035   \n\n  $/vlCVX total $/vlCVX pure bribes  \n0         0.060               0.066  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Total CVX $</th>\n      <th>Total BADGER $</th>\n      <th>Amount CVX bought</th>\n      <th>Amount Badger bought</th>\n      <th>$/vlCVX total</th>\n      <th>$/vlCVX pure bribes</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>106428.420</td>\n      <td>40662.305</td>\n      <td>16893.400</td>\n      <td>10453.035</td>\n      <td>0.060</td>\n      <td>0.066</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|   Total CVX $ |   Total BADGER $ |   Amount CVX bought |   Amount Badger bought |   $/vlCVX total |   $/vlCVX pure bribes |\n",
-      "|---------------|------------------|---------------------|------------------------|-----------------|-----------------------|\n",
-      "|        106428 |          40662.3 |             16893.4 |                  10453 |            0.06 |                 0.066 |\n",
       "\n",
       "\n",
       ">>> Llama.Airforce $/vlCVX : 0.06832\n",
@@ -56,7 +61,9 @@
    ],
    "source": [
     "from decimal import Decimal\n",
-    "from tabulate import tabulate\n",
+    "\n",
+    "import pandas as pd\n",
+    "from IPython.core.display_functions import display\n",
     "\n",
     "voting_data = {'total_cvx_sold_in_$': Decimal('106428.420'),\n",
     "               'total_badger_sold_in_$': Decimal('40662.305'),\n",
@@ -70,9 +77,8 @@
     "    voting_data['total_cvx_sold_in_$'], voting_data['total_badger_sold_in_$'], voting_data['amount_cvx'],\n",
     "     voting_data['amount_badger'], voting_data['$/vlCVX for total votes'], voting_data['$/vlCVX without badgerwbtc'],]\n",
     "]\n",
-    "table = tabulate(table_rows, tablefmt=\"github\", headers=[\"Total CVX $\", \"Total BADGER $\", \"Amount CVX bought\", \"Amount Badger bought\",\"$/vlCVX total\", \"$/vlCVX pure bribes\"])\n",
-    "print(table)\n",
-    "\n",
+    "dataframe = pd.DataFrame(data=table_rows, columns=[\"Total CVX $\", \"Total BADGER $\", \"Amount CVX bought\", \"Amount Badger bought\",\"$/vlCVX total\", \"$/vlCVX pure bribes\"])\n",
+    "display(dataframe)\n",
     "llama_vlCVX = 0.06832\n",
     "badger_vlCVX = 0.066\n",
     "\n",
@@ -112,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 39,
    "outputs": [
     {
      "data": {
