feat: move data to separate module for better portability

--- a/notebooks/bribes_bvecvx_r23.ipynb
+++ b/notebooks/bribes_bvecvx_r23.ipynb
@@ -3,17 +3,17 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## A notebook for bveCVX round 4th Aug 2022\n",
+    "## Bribe and Voting report for bveCVX round 21st Jul 2022\n",
     "\n",
     "---\n",
     "\n",
     "### Snapshot Link\n",
     "\n",
-    "[Snapshot Voting Round](https://snapshot.org/#/cvx.eth/proposal/bafkreif6psu3omlhiuwlp5iryyl6vntnccevm5grlj5ugr7o6tefp26yae)\n",
+    "[Snapshot Voting Round](https://vote.convexfinance.com/#/proposal/bafkreih3lls4ykddfszdqju74okkkf64klpr6hox34b36tp6neyowzob44)\n",
     "\n",
     "### Llama.Airforce:\n",
     "\n",
-    "[Llama Airforce Link](https://llama.airforce/#/bribes/rounds/votium/cvx-crv/24)\n",
+    "[Llama Airforce Link](https://llama.airforce/#/bribes/rounds/votium/cvx-crv/23)\n",
     "\n"
    ],
    "metadata": {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -53,7 +53,7 @@
      "text": [
       "\n",
       "\n",
-      ">>> Llama.Airforce $/vlCVX : 0.06832\n",
+      ">>> Llama.Airforce $/vlCVX : 0.06832000000000000572430991496730712242424488067626953125\n",
       ">>> Badger $/vlCVX : 0.066\n",
       ">>> Difference is 3.454%\n"
      ]
@@ -65,22 +65,18 @@
     "import pandas as pd\n",
     "from IPython.core.display_functions import display\n",
     "\n",
-    "voting_data = {'total_cvx_sold_in_$': Decimal('106428.420'),\n",
-    "               'total_badger_sold_in_$': Decimal('40662.305'),\n",
-    "               'amount_cvx': Decimal('16893.400'),\n",
-    "               'amount_badger': Decimal('10453.035'),\n",
-    "               'badger_price_at_the_moment_of_sale_in_$': Decimal('3.890'),\n",
-    "               'cvx_price_at_the_moment_of_sale_in_$': Decimal('6.300'),\n",
-    "               '$/vlCVX for total votes': Decimal('0.060'),\n",
-    "               '$/vlCVX without badgerwbtc': Decimal('0.066')}\n",
-    "table_rows = [[\n",
-    "    voting_data['total_cvx_sold_in_$'], voting_data['total_badger_sold_in_$'], voting_data['amount_cvx'],\n",
-    "     voting_data['amount_badger'], voting_data['$/vlCVX for total votes'], voting_data['$/vlCVX without badgerwbtc'],]\n",
-    "]\n",
-    "dataframe = pd.DataFrame(data=table_rows, columns=[\"Total CVX $\", \"Total BADGER $\", \"Amount CVX bought\", \"Amount Badger bought\",\"$/vlCVX total\", \"$/vlCVX pure bribes\"])\n",
+    "from notebooks.bvecvx_data import VOTING_DATA_R23\n",
+    "from notebooks.bvecvx_data import get_rows_from_data\n",
+    "\n",
+    "TABLE_COLUMNS = [\"Total CVX $\", \"Total BADGER $\", \"Amount CVX bought\", \"Amount Badger bought\",\n",
+    "                 \"$/vlCVX total\", \"$/vlCVX pure bribes\"]\n",
+    "\n",
+    "\n",
+    "table_rows = get_rows_from_data(VOTING_DATA_R23)\n",
+    "dataframe = pd.DataFrame(data=table_rows, columns=TABLE_COLUMNS)\n",
     "display(dataframe)\n",
-    "llama_vlCVX = 0.06832\n",
-    "badger_vlCVX = 0.066\n",
+    "llama_vlCVX = Decimal(0.06832)\n",
+    "badger_vlCVX = VOTING_DATA_R23['$/vlCVX without badgerwbtc']\n",
     "\n",
     "print(f\"\\n\")\n",
     "print(f\">>> Llama.Airforce $/vlCVX : {llama_vlCVX}\")\n",
@@ -118,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -130,19 +126,17 @@
     }
    ],
    "source": [
+    "from notebooks.bvecvx_data import BRIBES_HARVESTED_DATA_R23\n",
     "import matplotlib.pyplot as plt\n",
-    "from decimal import Decimal\n",
     "\n",
     "plt.rcParams[\"figure.figsize\"] = (10, 10)\n",
-    "bribes_data = {\"frax\": Decimal(228333.4003595493159628450234), \"2pool-frax\": Decimal(139675.8051593709082650805046),\n",
-    "               \"dola\": Decimal(617441.7348492212164141448451), \"alusd\": Decimal(563262.0933380010783766220852),\n",
-    "               \"aleth\": Decimal(565724.8043157838119237822106), \"fpifrax\": Decimal(112585.9844037608392463191238),\n",
-    "               \"f-badgerwbtc\": Decimal(235687.1553570462402634102000)}\n",
-    "labels = tuple(bribes_data.keys())\n",
-    "pools_bribes = list(bribes_data.values())\n",
+    "\n",
+    "labels = tuple(BRIBES_HARVESTED_DATA_R23.keys())\n",
+    "pools_bribes = list(BRIBES_HARVESTED_DATA_R23.values())\n",
     "biggest_bribe_by_vote = max(pools_bribes)\n",
     "biggest_bribe_ix = pools_bribes.index(biggest_bribe_by_vote)\n",
     "explode = []\n",
+    "# Explode biggest bribe by value\n",
     "for bribe in pools_bribes:\n",
     "    explode.append(0.1) if pools_bribes.index(bribe) == biggest_bribe_ix else explode.append(0)\n",
     "\n",
