chore: update total earned bribes data

--- a/notebooks/bribes_bvecvx_r25.ipynb
+++ b/notebooks/bribes_bvecvx_r25.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
@@ -55,7 +55,8 @@
       "\n",
       ">>> Llama.Airforce $/vlCVX : $0.0644/vlCVX\n",
       ">>> Badger $/vlCVX : $0.0643/vlCVX\n",
-      ">>> Difference is 0.093%\n"
+      ">>> Difference is 0.093%\n",
+      ">>> Total earned bribes for round is: $144248.998\n"
      ]
     }
    ],
@@ -80,7 +81,8 @@
     "print(f\"\\n\")\n",
     "print(f\">>> Llama.Airforce $/vlCVX : ${round(llama_vlCVX, 4)}/vlCVX\")\n",
     "print(f\">>> Badger $/vlCVX : ${badger_vlCVX}/vlCVX\")\n",
-    "print(f\">>> Difference is {round(abs(llama_vlCVX - badger_vlCVX) / ((llama_vlCVX + badger_vlCVX) / 2) * 100, 3)}%\")"
+    "print(f\">>> Difference is {round(abs(llama_vlCVX - badger_vlCVX) / ((llama_vlCVX + badger_vlCVX) / 2) * 100, 3)}%\")\n",
+    "print(f\">>> Total earned bribes for round is: ${VOTING_DATA_R25['total_cvx_sold_in_$'] + VOTING_DATA_R25['total_badger_sold_in_$']}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
