chore: refactor calculations a bit

--- a/notebooks/bribes_research/bribes_research.ipynb
+++ b/notebooks/bribes_research/bribes_research.ipynb
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
-      "text/plain": "  Protocol  BADGER total bribe in $  Bribes Portion %  Bribes Portion  \\\n0      CVX                 171600.0            100.00   171600.000000   \n1     AURA                 171600.0            100.00   171600.000000   \n2      CVX                 171600.0             50.00    85800.000000   \n3     AURA                 171600.0             50.00    85800.000000   \n4      CVX                 171600.0             24.81    42578.046575   \n5     AURA                 171600.0             75.19   129021.953425   \n\n    Dilution        $I/O  \n0   6.396820  137.757540  \n1  55.507226  110.586181  \n2   3.198410  142.464699  \n3  27.753613  179.567406  \n4   1.587203  144.835942  \n5  41.734561  144.817951  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Protocol</th>\n      <th>BADGER total bribe in $</th>\n      <th>Bribes Portion %</th>\n      <th>Bribes Portion</th>\n      <th>Dilution</th>\n      <th>$I/O</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>CVX</td>\n      <td>171600.0</td>\n      <td>100.00</td>\n      <td>171600.000000</td>\n      <td>6.396820</td>\n      <td>137.757540</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>AURA</td>\n      <td>171600.0</td>\n      <td>100.00</td>\n      <td>171600.000000</td>\n      <td>55.507226</td>\n      <td>110.586181</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>CVX</td>\n      <td>171600.0</td>\n      <td>50.00</td>\n      <td>85800.000000</td>\n      <td>3.198410</td>\n      <td>142.464699</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>AURA</td>\n      <td>171600.0</td>\n      <td>50.00</td>\n      <td>85800.000000</td>\n      <td>27.753613</td>\n      <td>179.567406</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>CVX</td>\n      <td>171600.0</td>\n      <td>24.81</td>\n      <td>42578.046575</td>\n      <td>1.587203</td>\n      <td>144.835942</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>AURA</td>\n      <td>171600.0</td>\n      <td>75.19</td>\n      <td>129021.953425</td>\n      <td>41.734561</td>\n      <td>144.817951</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "  Protocol  BADGER total bribe in $  Bribes Portion %  Bribes Portion  \\\n0      CVX                 170800.0            100.00   170800.000000   \n1     AURA                 170800.0            100.00   170800.000000   \n2      CVX                 170800.0             50.00    85400.000000   \n3     AURA                 170800.0             50.00    85400.000000   \n4      CVX                 170800.0             22.53    38488.279393   \n5     AURA                 170800.0             77.47   132311.720607   \n\n    Dilution        $I/O  \n0   6.338379  139.450002  \n1  54.451739  115.807732  \n2   3.169190  144.168514  \n3  27.225869  185.030269  \n4   1.428298  146.760475  \n5  42.181518  147.005113  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Protocol</th>\n      <th>BADGER total bribe in $</th>\n      <th>Bribes Portion %</th>\n      <th>Bribes Portion</th>\n      <th>Dilution</th>\n      <th>$I/O</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>CVX</td>\n      <td>170800.0</td>\n      <td>100.00</td>\n      <td>170800.000000</td>\n      <td>6.338379</td>\n      <td>139.450002</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>AURA</td>\n      <td>170800.0</td>\n      <td>100.00</td>\n      <td>170800.000000</td>\n      <td>54.451739</td>\n      <td>115.807732</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>CVX</td>\n      <td>170800.0</td>\n      <td>50.00</td>\n      <td>85400.000000</td>\n      <td>3.169190</td>\n      <td>144.168514</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>AURA</td>\n      <td>170800.0</td>\n      <td>50.00</td>\n      <td>85400.000000</td>\n      <td>27.225869</td>\n      <td>185.030269</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>CVX</td>\n      <td>170800.0</td>\n      <td>22.53</td>\n      <td>38488.279393</td>\n      <td>1.428298</td>\n      <td>146.760475</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>AURA</td>\n      <td>170800.0</td>\n      <td>77.47</td>\n      <td>132311.720607</td>\n      <td>42.181518</td>\n      <td>147.005113</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -32,15 +32,15 @@
     "import requests\n",
     "from IPython.core.display_functions import display\n",
     "\n",
+    "from notebooks.bribes_research.constants import BRIBES_URL\n",
+    "from notebooks.bribes_research.constants import DASHBOARD_URL\n",
+    "from notebooks.bribes_research.constants import PROTOCOL_AURA\n",
+    "from notebooks.bribes_research.constants import PROTOCOL_CVX\n",
+    "from notebooks.bribes_research.constants import TABLE_COLUMNS\n",
+    "from notebooks.bribes_research.helpers import calculate_metrics\n",
     "from notebooks.bribes_research.helpers import fetch_token_prices\n",
     "\n",
     "BADGER_BRIBE = 40000\n",
-    "\n",
-    "BRIBES_URL = \"https://api.llama.airforce/bribes\"\n",
-    "DASHBOARD_URL = \"https://api.llama.airforce//dashboard\"\n",
-    "TABLE_COLUMNS = [\"Protocol\", \"BADGER total bribe in $\", \"Bribes Portion %\", \"Bribes Portion\", \"Dilution\", \"$I/O\",]\n",
-    "PROTOCOL_CVX = \"CVX\"\n",
-    "PROTOCOL_AURA = \"AURA\"\n",
     "\n",
     "table_rows = []\n",
     "token_prices = fetch_token_prices(['badger-dao'])\n",
@@ -58,27 +58,19 @@
     "total_bribes_aura = sum([bribe['amountDollars'] for bribe in aura_bribes['epoch']['bribes']])\n",
     "dollar_spent_on_bribes_aura = aura_dash['dashboard']['rewardPerDollarBribe']\n",
     "\n",
-    "cvx_dilution_100 = badger_bribe_in_dollar / total_bribes_cvx * 100\n",
-    "aura_dilution_100 = badger_bribe_in_dollar / total_bribes_aura * 100\n",
-    "\n",
-    "cvx_in_out_100 = (100 - cvx_dilution_100) * dollar_spent_on_bribes_cvx\n",
+    "cvx_dilution_100, cvx_in_out_100 = calculate_metrics(badger_bribe_in_dollar, total_bribes_cvx, dollar_spent_on_bribes_cvx)\n",
     "table_rows.append(\n",
     "    [PROTOCOL_CVX, badger_bribe_in_dollar, (badger_bribe_in_dollar / badger_bribe_in_dollar) * 100, badger_bribe_in_dollar, cvx_dilution_100, cvx_in_out_100]\n",
     ")\n",
-    "aura_in_out_100 = (100 - aura_dilution_100) * dollar_spent_on_bribes_aura\n",
+    "aura_dilution_100, aura_in_out_100 = calculate_metrics(badger_bribe_in_dollar, total_bribes_aura, dollar_spent_on_bribes_aura)\n",
     "table_rows.append(\n",
     "    [PROTOCOL_AURA, badger_bribe_in_dollar, (badger_bribe_in_dollar / badger_bribe_in_dollar) * 100, badger_bribe_in_dollar, aura_dilution_100, aura_in_out_100]\n",
     ")\n",
-    "\n",
-    "# Rebalancing bribe values\n",
-    "cvx_dilution_50 = ((badger_bribe_in_dollar / 2) / total_bribes_cvx * 100)\n",
-    "aura_dilution_50 = ((badger_bribe_in_dollar / 2) / total_bribes_aura * 100)\n",
-    "\n",
-    "cvx_in_out_50 = (100 - cvx_dilution_50) * dollar_spent_on_bribes_cvx\n",
+    "cvx_dilution_50, cvx_in_out_50 = calculate_metrics(badger_bribe_in_dollar / 2, total_bribes_cvx, dollar_spent_on_bribes_cvx)\n",
     "table_rows.append(\n",
     "    [PROTOCOL_CVX, badger_bribe_in_dollar, ((badger_bribe_in_dollar / 2) / badger_bribe_in_dollar) * 100, badger_bribe_in_dollar / 2, cvx_dilution_50, cvx_in_out_50]\n",
     ")\n",
-    "aura_in_out_50 = (100 - aura_dilution_50) * dollar_spent_on_bribes_aura\n",
+    "aura_dilution_50, aura_in_out_50 = calculate_metrics(badger_bribe_in_dollar / 2, total_bribes_aura, dollar_spent_on_bribes_aura)\n",
     "table_rows.append(\n",
     "    [PROTOCOL_AURA, badger_bribe_in_dollar, ((badger_bribe_in_dollar / 2) / badger_bribe_in_dollar) * 100, badger_bribe_in_dollar / 2, aura_dilution_50, aura_in_out_50]\n",
     ")\n",
@@ -99,10 +91,8 @@
     "        bribe_stolen = aura_bribe_portion * rebalancing_step\n",
     "        cvx_bribe_portion -= bribe_stolen\n",
     "        aura_bribe_portion += bribe_stolen\n",
-    "    cvx_dilution =  cvx_bribe_portion / total_bribes_cvx * 100\n",
-    "    aura_dilution = aura_bribe_portion / total_bribes_aura * 100\n",
-    "    cvx_in_out_floating = (100 - cvx_dilution) * dollar_spent_on_bribes_cvx\n",
-    "    aura_in_out_floating = (100 - aura_dilution) * dollar_spent_on_bribes_aura\n",
+    "    cvx_dilution, cvx_in_out_floating = calculate_metrics(cvx_bribe_portion, total_bribes_cvx, dollar_spent_on_bribes_cvx)\n",
+    "    aura_dilution, aura_in_out_floating = calculate_metrics(aura_bribe_portion, total_bribes_aura, dollar_spent_on_bribes_aura)\n",
     "\n",
     "table_rows.append(\n",
     "    [PROTOCOL_CVX, badger_bribe_in_dollar, round(cvx_bribe_portion / badger_bribe_in_dollar * 100, 2), cvx_bribe_portion, cvx_dilution, cvx_in_out_floating]\n",
