--- a/notebooks/bribes_research/bribes_research.ipynb
+++ b/notebooks/bribes_research/bribes_research.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "outputs": [
     {
      "data": {
@@ -133,7 +133,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Displaying $I/O metric for latest bribes round on both Votium and HH"
+    "## Displaying $I/O metric for latest bribes round on both Votium and HH"
    ],
    "metadata": {
     "collapsed": false,
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "outputs": [
     {
      "data": {
