--- a/notebooks/cvx_bribes/bribes_bvecvx_r23.ipynb
+++ b/notebooks/cvx_bribes/bribes_bvecvx_r23.ipynb
@@ -57,8 +57,8 @@
     "import pandas as pd\n",
     "from IPython.core.display_functions import display\n",
     "\n",
-    "from notebooks.bvecvx_data import VOTING_DATA_R23\n",
-    "from notebooks.bvecvx_data import get_rows_from_data\n",
+    "from notebooks.cvx_bribes.bvecvx_data import VOTING_DATA_R23\n",
+    "from notebooks.cvx_bribes.bvecvx_data import get_rows_from_data\n",
     "\n",
     "TABLE_COLUMNS = [\"Total CVX $\", \"Total BADGER $\", \"Amount CVX bought\", \"Amount Badger bought\",\n",
     "                 \"$/vlCVX total\", \"$/vlCVX pure bribes\"]\n",
@@ -118,7 +118,7 @@
     }
    ],
    "source": [
-    "from notebooks.bvecvx_data import BRIBES_HARVESTED_DATA_R23\n",
+    "from notebooks.cvx_bribes.bvecvx_data import BRIBES_HARVESTED_DATA_R23\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.rcParams[\"figure.figsize\"] = (10, 10)\n",
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "from notebooks.bvecvx_data import VOTING_DATASETS\n",
+    "from notebooks.cvx_bribes.bvecvx_data import VOTING_DATASETS\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
