--- a/notebooks/cvx_bribes/bribes_bvecvx_r25.ipynb
+++ b/notebooks/cvx_bribes/bribes_bvecvx_r25.ipynb
@@ -66,8 +66,8 @@
     "import pandas as pd\n",
     "from IPython.core.display_functions import display\n",
     "\n",
-    "from notebooks.bvecvx_data import VOTING_DATA_R25\n",
-    "from notebooks.bvecvx_data import get_rows_from_data\n",
+    "from notebooks.cvx_bribes.bvecvx_data import VOTING_DATA_R25\n",
+    "from notebooks.cvx_bribes.bvecvx_data import get_rows_from_data\n",
     "\n",
     "TABLE_COLUMNS = [\"Total CVX $\", \"Total BADGER $\", \"Amount CVX bought\", \"Amount Badger bought\",\n",
     "                 \"$/vlCVX total\", \"$/vlCVX pure bribes\"]\n",
@@ -127,7 +127,7 @@
     }
    ],
    "source": [
-    "from notebooks.bvecvx_data import BRIBES_HARVESTED_DATA_R25\n",
+    "from notebooks.cvx_bribes.bvecvx_data import BRIBES_HARVESTED_DATA_R25\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.rcParams[\"figure.figsize\"] = (10, 10)\n",
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "from notebooks.bvecvx_data import VOTING_DATASETS\n",
+    "from notebooks.cvx_bribes.bvecvx_data import VOTING_DATASETS\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -233,7 +233,7 @@
     }
    ],
    "source": [
-    "from notebooks.bvecvx_data import VOTING_DATASETS\n",
+    "from notebooks.cvx_bribes.bvecvx_data import VOTING_DATASETS\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -250,18 +250,6 @@
     "plt.title(\"Total bribes in $\")\n",
     "plt.show()"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
