chore: refactor main data script a bit

--- a/notebooks/bribes_research/bribes_research.ipynb
+++ b/notebooks/bribes_research/bribes_research.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import math\n",
@@ -24,34 +24,29 @@
     "import requests\n",
     "from IPython.core.display_functions import display\n",
     "\n",
+    "from notebooks.bribes_research.constants import BADGER_LOW_BOUND\n",
+    "from notebooks.bribes_research.constants import BADGER_UPPER_BOUND\n",
     "from notebooks.bribes_research.constants import BRIBES_URL\n",
     "from notebooks.bribes_research.constants import DASHBOARD_URL\n",
+    "from notebooks.bribes_research.constants import FEE\n",
+    "from notebooks.bribes_research.constants import POOL_WEIGHTS\n",
     "from notebooks.bribes_research.constants import PROTOCOL_AURA\n",
     "from notebooks.bribes_research.constants import PROTOCOL_CVX\n",
+    "from notebooks.bribes_research.constants import REBALANCING_STEP\n",
+    "from notebooks.bribes_research.constants import STEP\n",
     "from notebooks.bribes_research.constants import TABLE_COLUMNS_COMMON_METRICS\n",
     "from notebooks.bribes_research.helpers import calculate_metrics\n",
     "from notebooks.bribes_research.helpers import fetch_token_prices\n",
     "\n",
     "pd.set_option('display.max_rows', 500)\n",
-    "BADGER_BRIBE = 42000\n",
-    "STEP = 2000\n",
-    "BADGER_LOW_BOUND = 2000\n",
-    "BADGER_UPPER_BOUND = BADGER_BRIBE\n",
-    "# HH and Votium take 4% on all bribes\n",
-    "FEE = 0.04  # in %\n",
     "\n",
-    "REBALANCING_STEP = 0.00001  # in %\n",
-    "\n",
-    "# Order matters here\n",
-    "POOL_WEIGHTS = [0.5, 0.6, 0.8, 1]\n",
     "\n",
     "table_rows = []\n",
     "average_weighed_metrics = []\n",
     "cvx_io_metrics = []\n",
     "aura_io_metrics = []\n",
     "total_bribes_table = []\n",
-    "token_prices = fetch_token_prices(['badger-dao'])\n",
-    "badger_price = token_prices['badger-dao']['usd']\n",
+    "badger_price = fetch_token_prices(['badger-dao'])['badger-dao']['usd']\n",
     "\n",
     "cvx_bribes = requests.post(BRIBES_URL, json={'platform': \"votium\", 'protocol': \"cvx-crv\"}).json()\n",
     "cvx_dash = requests.post(DASHBOARD_URL, json={\"id\": \"bribes-overview-votium\"}).json()\n",
@@ -72,7 +67,6 @@
     "                                                       dollar_spent_on_bribes_cvx)\n",
     "    aura_dilution_50, aura_in_out_50 = calculate_metrics(badger_bribe_in_dollar_after_fees / 2, total_bribes_aura,\n",
     "                                                         dollar_spent_on_bribes_aura)\n",
-    "\n",
     "    # Rebalance here\n",
     "    cvx_in_out_floating = cvx_in_out_50\n",
     "    aura_in_out_floating = aura_in_out_50\n",
@@ -84,6 +78,7 @@
     "        # Do not allow negative numbers\n",
     "        cvx_bribe_portion_percent = round(cvx_bribe_portion / badger_bribe_in_dollar_after_fees * 100, 2)\n",
     "        aura_bribe_portion_percent = round(aura_bribe_portion / badger_bribe_in_dollar_after_fees * 100, 2)\n",
+    "        # If any of bribe percent is getting closer to 0, break the loop to not go to negative numbers\n",
     "        if math.isclose(cvx_bribe_portion_percent, 0, abs_tol=0.1) or math.isclose(aura_bribe_portion_percent, 0, abs_tol=0.1):\n",
     "            break\n",
     "        if cvx_in_out_floating > aura_in_out_floating:\n",
@@ -144,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -180,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -219,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
