feat: move data get to separate module

--- a/notebooks/ebtc_research/fees_research.ipynb
+++ b/notebooks/ebtc_research/fees_research.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "outputs": [
     {
      "data": {
@@ -43,28 +43,15 @@
     }
    ],
    "source": [
-    "from random import uniform\n",
-    "\n",
     "import pandas as pd\n",
     "from IPython.core.display_functions import display\n",
     "\n",
+    "from notebooks.ebtc_research.generate_data import get_tables\n",
+    "\n",
     "TABLE_HEADERS = [\"Volume\", \"Projected Yearly Revenue\", \"Fee\"]\n",
-    "MINIMAL_FEE = 0.005  # in %\n",
-    "MAX_FEE = 0.05  # in %\n",
-    "# Starting with 10m volume\n",
-    "SIMULATED_VOLUME = 1000000\n",
+    "min_fee_revenues, random_fee_revenues = get_tables()\n",
     "\n",
-    "volumes = []\n",
-    "for volume_multiplier in range(1, 16):\n",
-    "    volumes.append(SIMULATED_VOLUME * volume_multiplier)\n",
-    "revenue_table_minimal_fees = []\n",
-    "revenue_table_randomized_fees = []\n",
-    "for sim_volume in volumes:\n",
-    "    revenue_table_minimal_fees.append([\"{:10.4f}\".format(sim_volume), sim_volume * MINIMAL_FEE, MINIMAL_FEE * 100])\n",
-    "    random_fee = uniform(float(MINIMAL_FEE), float(MAX_FEE))\n",
-    "    revenue_table_randomized_fees.append([\"{:10.4f}\".format(sim_volume), sim_volume * random_fee, random_fee * 100])\n",
-    "\n",
-    "dataframe = pd.DataFrame(data=revenue_table_minimal_fees, columns=TABLE_HEADERS)\n",
+    "dataframe = pd.DataFrame(data=min_fee_revenues, columns=TABLE_HEADERS)\n",
     "display(dataframe)"
    ],
    "metadata": {
